--- a/index.html
+++ b/index.html
@@ -1,4 +1,40 @@
-<frameset cols="20%,80%">
-    <frame src="menu.html">
-    <frame id="frame" name="frame">
-  </frameset>
+<!DOCTYPE html>
+<html>
+	<head>
+	
+		<title>Barcalona Team</title>
+		
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="Expires" content="-1">
+		<meta http-equiv="Pragma" content="no-cache">
+		<meta http-equiv="Cache-Control" content="no-cache">
+
+		<meta charset="UTF-8">
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		
+		<meta name="apple-touch-fullscreen" content="yes" />
+        <meta name="apple-mobile-web-app-title" content="Onlino" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="viewport" content="width = device-width, initial-scale = 1, user-scalable = no">
+
+		
+	    <link rel="shortcut icon" href="img/icon.jpg">
+		<link rel="apple-touch-icon" href="img/icon.jpg">
+		<link rel="apple-touch-startup-image" href="img/icon.jpg">
+		<link rel="apple-touch-icon-precomposed" href="img/icon.jpg">
+		
+        <script src="js/common.js"></script>
+		<link href="css/common.css" rel="stylesheet">
+		
+
+	</head>
+	<body>
+    <frameset cols="20%,80%">
+      <frame src="menu.html">
+      <frame id="frame" name="frame">
+    </frameset>
+        
+	</body>
+</html>
